--- a/.github/workflows/maven-deploy.yml
+++ b/.github/workflows/maven-deploy.yml
@@ -27,6 +27,6 @@ jobs:
           MAVEN_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
         run: |
           mvn deploy \
-            -DaltDeploymentRepository=nexus::default::http://<nexus-ip>:8081/repository/maven-releases/ \
+            -DaltDeploymentRepository=nexus::default::http://http://192.168.0.178:8081/repository/maven-releases/ \
             -Dusername=$MAVEN_USERNAME \
             -Dpassword=$MAVEN_PASSWORD
